@@ -61,9 +61,9 @@
         <findbugs.maven.plugin.version>2.5.2</findbugs.maven.plugin.version>
         <maven.dependency.plugin.version>2.6</maven.dependency.plugin.version>
         <junit.version>4.11</junit.version>
-        <junit-benchmarks.version>0.7.0</junit-benchmarks.version>
+        <junit-benchmarks.version>0.7.2</junit-benchmarks.version>
         <h2.version>1.3.160</h2.version>
-        <mockito.all.version>1.8.2</mockito.all.version>
+        <mockito.all.version>1.9.5</mockito.all.version>
         <log4j.version>1.2.12</log4j.version>
         <slf4j.api.version>1.6.0</slf4j.api.version>
     </properties>
@@ -176,6 +176,7 @@
                     </argLine>
                     <groups>com.hazelcast.test.annotation.QuickTest</groups>
                     <excludedGroups>com.hazelcast.test.annotation.SlowTest</excludedGroups>
+                    <excludedGroups>com.hazelcast.test.annotation.ProblematicTest</excludedGroups>
                 </configuration>
             </plugin>
 
@@ -229,6 +230,7 @@
                                 <include>com/hazelcast/security/*</include>
                                 <include>com/hazelcast/spi/*</include>
                                 <include>com/hazelcast/transaction/*</include>
+                                <include>com/hazelcast/mapreduce/*</include>
 
                                 <include>com/hazelcast/nio/serialization/ClassDefinition.java</include>
                                 <include>com/hazelcast/nio/serialization/ClassDefinitionBuilder.java</include>
@@ -387,6 +389,7 @@
                         <version>${maven.surefire.plugin.version}</version>
                         <configuration combine.self="override">
                             <parallel>none</parallel>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
                                 -Dhazelcast.version.check.enabled=false
                                 -Dhazelcast.mancenter.enabled=false
@@ -394,6 +397,7 @@
                                 -Dhazelcast.test.use.network=true
                             </argLine>
                             <groups>com.hazelcast.test.annotation.SlowTest</groups>
+                            <excludedGroups>com.hazelcast.test.annotation.ProblematicTest</excludedGroups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -409,6 +413,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven.surefire.plugin.version}</version>
                         <configuration combine.self="override">
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <parallel>none</parallel>
                             <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
                                 -Dhazelcast.version.check.enabled=false
@@ -417,6 +422,31 @@
                                 -Dhazelcast.test.use.network=true
                             </argLine>
                             <groups>com.hazelcast.test.annotation.QuickTest,com.hazelcast.test.annotation.SlowTest</groups>
+                            <excludedGroups>com.hazelcast.test.annotation.ProblematicTest</excludedGroups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>problematic-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <parallel>none</parallel>
+                            <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
+                                -Dhazelcast.version.check.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=true
+                            </argLine>
+                            <groups>com.hazelcast.test.annotation.ProblematicTest</groups>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -475,6 +505,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.all.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
